k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uml-assessment
  labels:
    app.kubernetes.io/part-of: uml-assessment
